--- a/css/style.css
+++ b/css/style.css
@@ -461,6 +461,8 @@ button:hover {
   border-radius: 8px;
   background-color: #fafafa;
   padding: 1rem;
+  margin: 0 auto;
+  display: block;
   /* Contenedor del gráfico */
 }
 
@@ -664,6 +666,13 @@ button:hover {
   color: #333;
   font-weight: normal;
   /* Enlaces dentro del dropdown */
+}
+
+/* Quitar borde solo a los botones de chat */
+.dropdown-content a[href*="chat.php?room=chat1"],
+.dropdown-content a[href*="chat.php?room=chat2"],
+.dropdown-content a[href*="chat.php?room=chat3"] {
+  border: none !important;
 }
 
 .dropdown-content a:hover {
@@ -1115,7 +1124,8 @@ main a:hover {
   background-color: #f5f5f5;
   border-radius: 5px;
   font-size: 0.9em;
-  color: #666;
+  color: #303030;
+  text-align: center;
 }
 
 /* Responsive para móviles */
@@ -1165,7 +1175,6 @@ main a:hover {
 
 .admin-container h2 {
   margin-bottom: 25px;
-  margin: 0px;
   color: #333;
   font-size: 24px;
 }
