--- a/css/style.css
+++ b/css/style.css
@@ -655,12 +655,11 @@ button:hover {
   display: none;
   position: absolute;
   background-color: #fff;
-  min-width: 160px;
+  min-width: 160px; 
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   border: 1px solid #ccc;
   border-radius: 4px;
-  z-index: 1;
-  /* Contenido del dropdown */
+  z-index: 1000; 
 }
 
 .dropdown-content a {
@@ -1311,6 +1310,7 @@ main a:hover {
 
 /* parte de chat */
 .chat-dropdown-container .dropdown-content {
+  width: 600px;
   min-width: 550px;
   padding: 0; 
   max-height: 80vh;
@@ -1318,6 +1318,10 @@ main a:hover {
   overflow: hidden; 
   display: flex; 
   flex-direction: column; 
+  top: 100%; 
+  right: 0;   
+  left: auto; 
+  z-index: 1001; 
 }
 
 .chat-group-list {
